# jgr_sys

./: CMakeLists.txt  README.md  jgr_sys-config.cmake.in
cmake/: CheckForRT.cmake  GetVersion.cmake  test_timing.c
doc/: CMakeLists.txt  Doxyfile.in
include/jgr/sys/: sys.h  version.h
src/: CMakeLists.txt
src/lib/: CMakeLists.txt  sys.c
src/lib/linux/: sys.c
src/lib/windows/: sys.c
src/tests/: CMakeLists.txt  jgr_sys_test.c
